InfoMagnus-master/aws/scripts/smartorder-vpc.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description" : "AWS CloudFormation template to construct a VPC containing an access host",

  "Parameters" : {

    "EnvName" : {
      "Description" : "Usage type of this environment",
      "Type" : "String",
      "AllowedValues" : ["Development", "Test", "Staging", "Production" ]
    },

    "Network" : {
      "Description" : "VPC Network prefix",
      "Type" : "String",
      "Default": "10.4",
      "AllowedValues" : ["10.4","10.201", "10.202", "10.203", "10.204", "10.205", "10.206", "10.207", "10.208", "10.209", "10.210", "10.211" ]
    },

    "KeyName" : {
      "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the bastion host",
      "Type" : "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription" : "must be the name of an existing EC2 KeyPair."
    },

    "SSLCertificateName" : {
      "Description" : "Name of an existing SSL certificate uploaded to AWS",
      "Type" : "String",
      "ConstraintDescription" : "must be the name of an existing SSL certificate already uploaded to AWS"
    },

    "SSHLocation" : {
      "Description" : "Lockdown SSH access to the bastion host (default can be accessed from anywhere)",
      "Type" : "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default" : "0.0.0.0/0",
      "AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription" : "must be a valid CIDR range of the form x.x.x.x/x."
    },

    "BastionEC2InstanceType" : {
      "Description" : "Entry Point EC2 instance type",
      "Type" : "String",
      "Default" : "t2.medium",
      "AllowedValues" : [ "t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "m2.xlarge" ],
      "ConstraintDescription" : "must be a valid EC2 instance type."
    },

    "CostCenter" : {
      "Description" : "Expense cost center used for theses resources",
      "Type" : "String",
      "Default": "901102"
    }
  },

  "Mappings" : {
    "SubnetConfig"  : {
      "VPC"         : { "CIDR" : ".0.0/16" },
      "Public1"     : { "CIDR" : ".1.0/24" },
      "Public2"     : { "CIDR" : ".2.0/24" },
      "Private1"    : { "CIDR" : ".10.0/24" },
      "Private2"    : { "CIDR" : ".20.0/24" },
      "PrivateDB1"  : { "CIDR" : ".100.0/24" },
      "PrivateDB2"  : { "CIDR" : ".200.0/24" }
    },

    "AWSInstanceType2Arch" : {
      "t2.nano"     : { "Arch" : "HVM64"  },
      "t2.micro"    : { "Arch" : "HVM64"  },
      "t2.small"    : { "Arch" : "HVM64"  },
      "t2.medium"   : { "Arch" : "HVM64"  } ,
      "t2.large"    : { "Arch" : "HVM64"  },
      "m3.medium"   : { "Arch" : "HVM64"  },
      "m3.large"    : { "Arch" : "HVM64"  },
      "m3.xlarge"   : { "Arch" : "HVM64"  },
      "m3.2xlarge"  : { "Arch" : "HVM64"  },
      "m4.large"    : { "Arch" : "HVM64"  },
      "m4.xlarge"   : { "Arch" : "HVM64"  },
      "m4.2xlarge"  : { "Arch" : "HVM64"  },
      "m4.4xlarge"  : { "Arch" : "HVM64"  },
      "m4.10xlarge" : { "Arch" : "HVM64"  },
      "c3.large"    : { "Arch" : "HVM64"  },
      "c3.xlarge"   : { "Arch" : "HVM64"  },
      "c3.2xlarge"  : { "Arch" : "HVM64"  },
      "c3.4xlarge"  : { "Arch" : "HVM64"  },
      "c3.8xlarge"  : { "Arch" : "HVM64"  },
      "c4.large"    : { "Arch" : "HVM64"  },
      "c4.xlarge"   : { "Arch" : "HVM64"  },
      "c4.2xlarge"  : { "Arch" : "HVM64"  },
      "c4.4xlarge"  : { "Arch" : "HVM64"  },
      "c4.8xlarge"  : { "Arch" : "HVM64"  },
      "r3.large"    : { "Arch" : "HVM64"  },
      "r3.xlarge"   : { "Arch" : "HVM64"  },
      "r3.2xlarge"  : { "Arch" : "HVM64"  },
      "r3.4xlarge"  : { "Arch" : "HVM64"  },
      "r3.8xlarge"  : { "Arch" : "HVM64"  },
      "i2.xlarge"   : { "Arch" : "HVM64"  },
      "i2.2xlarge"  : { "Arch" : "HVM64"  },
      "i2.4xlarge"  : { "Arch" : "HVM64"  },
      "i2.8xlarge"  : { "Arch" : "HVM64"  },
      "d2.xlarge"   : { "Arch" : "HVM64"  },
      "d2.2xlarge"  : { "Arch" : "HVM64"  },
      "d2.4xlarge"  : { "Arch" : "HVM64"  },
      "d2.8xlarge"  : { "Arch" : "HVM64"  },
      "hi1.4xlarge" : { "Arch" : "HVM64"  },
      "hs1.8xlarge" : { "Arch" : "HVM64"  },
      "cr1.8xlarge" : { "Arch" : "HVM64"  },
      "cc2.8xlarge" : { "Arch" : "HVM64"  }
    },

    "AWSRegionArch2AMI" : {
      "us-east-1"      : { "HVM64" : "ami-0a313d6098716f372" },
      "us-east-2"      : { "HVM64" : "ami-0c55b159cbfafe1f0" },
      "us-west-1"      : { "HVM64" : "ami-06397100adf427136" },
      "us-west-2"      : { "HVM64" : "ami-005bdb005fb00e791" },
      "ap-south-1"     : { "HVM64" : "ami-007d5db58754fa284" }
    },

    "AWSRegionAvailabilityZone" : {
      "us-east-1"      : { "Zone1" : "us-east-1a", "Zone2" : "us-east-1b" },
      "us-east-2"      : { "Zone1" : "us-east-2a", "Zone2" : "us-east-2b" },
      "us-west-1"      : { "Zone1" : "us-west-1a", "Zone2" : "us-west-1b" },
      "us-west-2"      : { "Zone1" : "us-west-2a", "Zone2" : "us-west-2c" },
      "ap-south-1"     : { "Zone1" : "ap-south-1a", "Zone2" : "ap-south-1b" }
    }
  },

  "Conditions" : {
    "CreateProdResources" : {"Fn::Equals" : [{"Ref" : "EnvName"}, "Production"]}
  },

  "Resources" : {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Network",
            "Value": "Public"
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" :  "CostCenter"}
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          }
        ]
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone1"
          ]
        },
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "Public1",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"public-1"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone2"
          ]
        },
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "Public2",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" }, "public-2"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone1"
          ]
        },
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "Private1",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private-1"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private"
          }
        ]
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone2"
          ]
        },
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "Private2",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private-2"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private"
          }
        ]
      }
    },
    "PrivateSubnetDB1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone1"
          ]
        },
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "PrivateDB1",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private-db-1"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private Backend"
          }
        ]
      }
    },
    "PrivateSubnetDB2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone2"
          ]
        },
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "PrivateDB2",
            "CIDR"
          ]
        }]]},
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private-db-2"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private Backend"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "GatewayToInternet": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "NAT" : {
      "DependsOn" : ["GatewayToInternet",
        "NATGatewayInternetAddress"
      ],
      "Type" : "AWS::EC2::NatGateway",
      "Properties" : {
        "AllocationId" : { "Fn::GetAtt" : [
          "NATGatewayInternetAddress", "AllocationId"]},
        "SubnetId" : { "Ref" : "PublicSubnet1"},
        "Tags" : [ {"Key" : "Name", "Value" : {"Ref": "AWS::StackName" } } ]
      }
    },
    "NATGatewayInternetAddress": {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"public"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "PrivateRouteTable": {
      "DependsOn": [
        "VPC"
      ],
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private"
          }
        ]
      }
    },
    "S3PrivateEndpoint" : {
      "Type" : "AWS::EC2::VPCEndpoint",
      "Properties" : {
        "RouteTableIds" : [{"Ref" : "PrivateRouteTable"}],
        "ServiceName" : { "Fn::Join": [ "", [ "com.amazonaws.", { "Ref": "AWS::Region" }, ".s3" ] ] },
        "VpcId" : {"Ref" : "VPC"}
      }
    },
    "PrivateSubnet1RouteTableAssociation": {
      "DependsOn": [
        "PrivateSubnet1",
        "PrivateRouteTable"
      ],
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet1"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "PrivateSubnet2RouteTableAssociation": {
      "DependsOn": [
        "PrivateSubnet2",
        "PrivateRouteTable"
      ],
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet2"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "PrivateDBSubnet1RouteTableAssociation": {
      "DependsOn": [
        "PrivateSubnetDB1",
        "PrivateRouteTable"
      ],
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetDB1"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "PrivateDBSubnet2RouteTableAssociation": {
      "DependsOn": [
        "PrivateSubnetDB2",
        "PrivateRouteTable"
      ],
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetDB2"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "GatewayToInternet",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet1"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet2"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PublicNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"public"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "PrivateNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private"
          }
        ]
      }
    },
    "PrivateDBNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"private-db"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          },
          {
            "Key": "Network",
            "Value": "Private DB"
          }
        ]
      }
    },
    "InboundHTTPPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "101",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "8000",
          "To": "8000"
        }
      }
    },
    "InboundPythonPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "102",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "5000",
          "To": "5000"
        }
      }
    },
    "InboundSSHPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "103",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "22",
          "To": "22"
        }
      }
    },
    "InboundDNSUDPPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "104",
        "Protocol": "17",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "53",
          "To": "53"
        }
      }
    },
    "InboundDNSTCPPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "105",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "53",
          "To": "53"
        }
      }
    },
    "InboundEphemeralTCPPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "106",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "1024",
          "To": "65535"
        }
      }
    },
    "InboundEphemeralUDPPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "107",
        "Protocol": "17",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "1024",
          "To": "65535"
        }
      }
    },
    "OutboundPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "InboundPostgresPrivateDBNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "101",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "5432",
          "To": "5432"
        }
      }
    },
    "InboundSSHPrivateDBNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "102",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "22",
          "To": "22"
        }
      }
    },
    "InboundDNSUDPPrivateDBNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "104",
        "Protocol": "17",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "53",
          "To": "53"
        }
      }
    },
    "InboundDNSTCPPrivateDBNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "105",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "53",
          "To": "53"
        }
      }
    },
    "InboundEphemeralTCPPrivateDBNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "106",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "1024",
          "To": "65535"
        }
      }
    },
    "InboundEphemeralUDPPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "107",
        "Protocol": "17",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": {"Fn::Join": ["",[ {"Ref": "Network"}, {
          "Fn::FindInMap": [
            "SubnetConfig",
            "VPC",
            "CIDR"
          ]
        }]]},
        "PortRange": {
          "From": "1024",
          "To": "65535"
        }
      }
    },
    "OutboundPrivateDBNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "InboundPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "OutboundPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "PublicSubnet1NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet1"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      }
    },
    "PublicSubnet2NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet2"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      }
    },
    "PrivateSubnet1NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet1"
        },
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        }
      }
    },
    "PrivateSubnet2NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet2"
        },
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        }
      }
    },
    "PrivateDBSubnet1NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetDB1"
        },
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        }
      }
    },
    "PrivateDBSubnet2NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetDB2"
        },
        "NetworkAclId": {
          "Ref": "PrivateDBNetworkAcl"
        }
      }
    },
    "BastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable access to the Bastion host",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8081",
            "ToPort": "8081",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "0",
            "ToPort": "0",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref":  "AWS::Region"},"bastion",{"Ref": "AWS::StackName"}]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          }
        ]
      }
    },
    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "RDS DB Subnet Group",
        "SubnetIds": [
          {
            "Ref": "PrivateSubnetDB1"
          },
          {
            "Ref": "PrivateSubnetDB2"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join" : ["-",[{"Ref": "AWS::StackName" },"db-subnet"]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          }
        ]
      }
    },
    "BastionEBSVolume": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AutoEnableIO": true,
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AWSRegionAvailabilityZone",
            {
              "Ref": "AWS::Region"
            },
            "Zone1"
          ]
        },
        "Encrypted": true,
        "Size": 100,
        "VolumeType": "gp2"
      }
    },
    "BastionInternetAddress": {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      }
    },
    "BastionInternetAddressAssociation" : {
      "DependsOn": ["BastionInternetAddress", "BastionHost"],
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "AllocationId": { "Fn::GetAtt" : [
          "BastionInternetAddress", "AllocationId"]},
        "InstanceId": {"Ref": "BastionHost"}
      }
    },
    "BastionHost": {
      "Type": "AWS::EC2::Instance",
      "DependsOn": ["GatewayToInternet"],
      "Properties": {
        "InstanceType": {
          "Ref": "BastionEC2InstanceType"
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "ImageId": {
          "Fn::FindInMap": [
            "AWSRegionArch2AMI",
            {
              "Ref": "AWS::Region"
            },
            {
              "Fn::FindInMap": [
                "AWSInstanceType2Arch",
                {
                  "Ref": "BastionEC2InstanceType"
                },
                "Arch"
              ]
            }
          ]
        },
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "BastionSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "PublicSubnet1"
            }
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sdb",
            "NoDevice": {}
          }
        ],
        "Volumes": [
          {
            "VolumeId": {
              "Ref": "BastionEBSVolume"
            },
            "Device": "/dev/sdb"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {"Fn::Join": ["-",[{"Ref":  "AWS::Region"},"ec2",{"Ref": "AWS::StackName"}]]}
          },
          {
            "Key": "Application",
            "Value": "SmartOrder"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "EnvName" }
          },
          {
            "Key": "CostCenter",
            "Value": {"Ref" : "CostCenter" }
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash -x\n",
                "echo #!/bin/bash -xe >> /home/ubuntu/.secrets\n",
                "echo ENVNAME=",{"Ref": "EnvName"}," >> /home/ubuntu/.secrets\n",
                "echo REGION=",{"Ref": "AWS::Region"}," >> /home/ubuntu/.secrets\n",
                "echo DEPLOYMENT=",{"Ref": "EnvName"}," >> /home/ubuntu/.secrets\n",
                "chown ubuntu:ubuntu /home/ubuntu/* /home/ubuntu/.secrets\n",
                "chmod 750 /home/ubuntu/setup.sh\n",
                "chmod 750 /home/ubuntu/.secrets\n"
              ]
            ]
          }
        }
      }
    },
    "PrivateRoute": {
      "DependsOn": [
        "PrivateRouteTable",
        "NAT"
      ],
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NAT" }
      }
    }
  },
  "Outputs" : {
    "DNSNameBastionHost" : {
      "Description" : "DNS Name of the Bastion host",
      "Value" :  { "Fn::GetAtt" : [
        "BastionHost", "PublicDnsName"] }
    }
  }
}
